--- a/index.html
+++ b/index.html
@@ -220,15 +220,17 @@
             extremely generous. If you have any questions, our support team
             would be happy to help you.
           </p>
-          <form class="input-wrapper" novalidate>
-            <input
-              type="email"
-              name="email"
-              id="email"
-              placeholder="email@example.com"
-            />
-            <p class="error-msg">Please enter a valid email address</p>
-            <button>Get Started For Free</button>
+          <form class="form" novalidate>
+            <div class="input-wrapper">
+              <input
+                type="email"
+                name="email"
+                id="email"
+                placeholder="email@example.com"
+              />
+              <p class="error-msg">Please enter a valid email address</p>
+            </div>
+            <button type="submit">Get Started For Free</button>
           </form>
         </div>
       </section>
