--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
 
     <style>
       .attribution {
+        width: max-content;
         position: absolute;
-        bottom: 0.25%;
+        bottom: 0.35%;
         left: 50%;
         transform: translateX(-50%);
         margin: auto;
