--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       .attribution {
         width: max-content;
         position: absolute;
-        bottom: 0.35%;
+        bottom: 0.25%;
         left: 50%;
         transform: translateX(-50%);
         margin: auto;
@@ -327,7 +327,9 @@
     <!--  -->
     <div class="attribution">
       Developed by
-      <a href="https://www.github.com/dubemmbah/">Chukwudubem Mbah</a>.
+      <a href="https://www.github.com/dubemmbah/" target="_blank"
+        >Chukwudubem Mbah</a
+      >.
     </div>
 
     <!-- <footer>
